<resources>
    <string name="app_name">Trolle</string>
    <string name="nav_boards">Boards</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Log out</string>
    <string name="user_name_default">User</string>
    <string name="user_email_default">"@UserEmail"</string>
    <string name="default_card_list_name">List Name</string>

    <!--those strings are for authentication layout-->
    <string name="server_client_id">829138065824-dp8j226v2s381ghh85qkbdrru2hnkc2k.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">Log in</string>
    <string name="loginFacebook">Log in with FaceBook</string>
    <string name="loginGoogle">Log in with Google</string>
    <string name="Or">Others Ways</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="signUp">Sign Up</string>
    <string name="error_Login">Log In fail. Something is wrong !!!</string>
    <string name="error_Toast">Missing </string>
    <string name="error_ConfirmPassword">Your confirm password does not match</string>
    <string name="signUp_Successfully">Sign up </string>
    <string name="processing">Processing</string>
    <string name="text_PasswordRecovery">Password Recovery </string>
    <string name="string_PasswordRecovery">Type your email in the box below</string>
    <string name="request_NewPassword">Request new Password</string>
    <string name="text_NotMember">Haven\'t had account yet ?</string>
    <string name="textclick_SignUpHere"><u>Sign Up Here</u></string>
    <string name="error_EmailType">Invalid Email type, please check it !</string>
    <string name="toast_PasswordResetSuccessfully">Check your email to complete reseting password.</string>
    <!--end strings for authentication layout-->

</resources>
