<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".authentication.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundLogin"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="50dp"
        android:paddingRight="40dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_PasswordRecovery"
            android:textColor="@color/textLoginColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/string_PasswordRecovery"
            android:textColor="@color/textLoginColor" />

        <EditText
            android:id="@+id/edtEmailFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/textLoginColor"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textLoginColor"
            android:textColorHint="@color/textLoginColor" />

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawableTint="@color/transparentBackgroundLogin"
            android:text="@string/request_NewPassword"
            android:textColor="@color/textLoginColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/text_NotMember"
                android:textColor="@color/textLoginColor" />

            <TextView
                android:id="@+id/txtSignUpFP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textclick_SignUpHere"
                android:textColor="@color/textLoginColor"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>