<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".authentication.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundLogin"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/edtEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/textLoginColor"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textLoginColor"
            android:textColorHint="@color/textLoginColor" />

        <EditText
            android:id="@+id/edtPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/textLoginColor"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textLoginColor"
            android:textColorHint="@color/textLoginColor" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
            android:drawableTint="@color/transparentBackgroundLogin"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/login"
            android:textColor="@color/textLoginColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/textLoginColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/Or"
                android:textColor="@color/textLoginColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/textLoginColor" />
        </LinearLayout>

        <!--<Button-->
            <!--android:id="@+id/btnLoginFacebook"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:background="@color/colorFacebook"-->
            <!--android:drawableLeft="@drawable/icon_facebook"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:text="@string/loginFacebook"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="16sp" />-->

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/backgroundLoginGoogle"
            android:drawableLeft="@drawable/icon_google"
            android:paddingLeft="10dp"
            android:text="@string/loginGoogle"
            android:textAllCaps="false"
            android:textColor="@color/textLoginColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgetPassword"
                android:textColor="@color/textLoginColor" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/signUp"
                android:textAlignment="viewEnd"
                android:textColor="@color/textLoginColor"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>